bad/bin_op_ne_array_int.example_compiler_output
ERROR
[1mbad/bin_op_ne_array_int.lat:3:13: [1;31merror: [0;1moperator != cannot compare values of types `int[]` and `int` because values are not convertible to either of the two types[m
	new int[3] != 42;
	           [1;32m^[m
